# whisperia

./: .gitignore  Cargo.toml  README.md  download-models.sh  download-quantized.sh  run-dev.sh
src/: audio.rs  hotkeys.rs  index.html  main.rs  overlay.rs  tray.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  input.rs  lib.rs  main.rs  transcription.rs
src-tauri/src/config/: mod.rs
src-tauri/src/hardware/: mod.rs
src/hardware/: mod.rs
